fix: page overflow while opening popups

--- a/src/styles/shared/layout.css
+++ b/src/styles/shared/layout.css
@@ -44,7 +44,6 @@
 .stretch {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
 }
 
 .stretch:global(.section) {
